Upload some basic requirement

--- a/CountriesInformation/app/src/main/res/layout/activity_main.xml
+++ b/CountriesInformation/app/src/main/res/layout/activity_main.xml
@@ -23,13 +23,14 @@
         android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/lblCountriesInfo">
+        android:layout_below="@+id/lblCountriesInfo"
+        android:layout_marginTop="0dp">
 
         <!-- A List displays all countries info  -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
