--- a/CountriesInformation/app/src/main/res/layout/country_item.xml
+++ b/CountriesInformation/app/src/main/res/layout/country_item.xml
@@ -2,16 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center">
+    android:layout_gravity="center"
+    android:layout_marginTop="10dp">
+
     <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:id="@+id/image_flag"
-        />
+        android:id="@+id/imgFlag"/>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:id="@+id/txtview_country_name"/>
-
+        android:id="@+id/txtCountryName"/>
 
 </LinearLayout>
