--- a/CountriesInformation/app/src/main/res/layout/country_detailed_info.xml
+++ b/CountriesInformation/app/src/main/res/layout/country_detailed_info.xml
@@ -136,7 +136,20 @@
                 android:text="test"
                 android:textSize="18dp"/>
         </TableRow>
+        <TableRow
+            android:layout_marginTop="5dp"
+            >
+            <TextView
+                android:text="@string/population"
+                android:textStyle="bold"
+                android:textSize="18dp"
+                android:textColor="#000000"/>
 
+            <TextView
+                android:id="@+id/txtPopulation"
+                android:text="test"
+                android:textSize="18dp"/>
+        </TableRow>
     </TableLayout>
 
 </LinearLayout>
