--- a/CountriesInformation/app/src/main/res/layout/country_item.xml
+++ b/CountriesInformation/app/src/main/res/layout/country_item.xml
@@ -2,17 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
     android:layout_marginTop="10dp">
 
     <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:id="@+id/imgFlag"/>
+        android:layout_width="60dp"
+        android:layout_height="36dp"
+        android:paddingLeft="3dp"
+        android:id="@+id/imgFlag"
+        android:layout_gravity="center"/>
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:id="@+id/txtCountryName"/>
+        android:layout_height="60dp"
+        android:paddingLeft="8dp"
+        android:id="@+id/txtCountryName"
+        android:gravity="center_vertical"/>
 
 </LinearLayout>
